dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Id: configure.in,v 1.2 2003-08-29 23:57:19 vtt Exp $)dnl

dnl This file ensures our --srcdir is right. Later it's also used to verify
dnl the acceptable version of Java compiler and the options specific to the
dnl versions.

AC_INIT
AC_CONFIG_SRCDIR([src/include/ServoController.h])

dnl I'd like it to read the configure-options to allow both the global set
dnl of options, as well as the local set.

GLOBAL_OPTIONS=/usr/local/share/servomaster/configure-options

if test -f "${GLOBAL_OPTIONS}" && test -z "${GLOBAL_OPTIONS_PRESENT}" ; then
    echo "Reading global options from ${GLOBAL_OPTIONS}"
    GLOBAL_OPTIONS_PRESENT="1" $0 `cat ${GLOBAL_OPTIONS}|tr "\n" " "` $*
    exit $?
fi

LOCAL_OPTIONS=`pwd`/configure-options

if test -f "${LOCAL_OPTIONS}" && test -z "${LOCAL_OPTIONS_PRESENT}" ; then
    echo "Reading local options from ${LOCAL_OPTIONS}"
    LOCAL_OPTIONS_PRESENT="1" $0 `cat ${LOCAL_OPTIONS}|tr "\n" " "` $*
    exit $?
fi

VERSION_MAJOR="0"
VERSION_MINOR="1"
PATCHLEVEL="0"

AC_SUBST(VERSION_MAJOR)dnl
AC_SUBST(VERSION_MINOR)dnl
AC_SUBST(PATCHLEVEL)dnl

PACKAGE="servomaster"
VERSION="${VERSION_MAJOR}.${VERSION_MINOR}p${PATCHLEVEL}"

AC_SUBST(PACKAGE)dnl
AC_SUBST(VERSION)dnl

AC_MSG_RESULT(Configuring ${PACKAGE}-${VERSION})

AC_PREFIX_DEFAULT(/opt/servomaster)dnl
AC_PREREQ(2.53)dnl
AC_CONFIG_AUX_DIR(src/scripts/install)dnl

AM_INIT_AUTOMAKE(${PACKAGE}, ${VERSION})dnl

AC_PROG_TEST

dnl AC_PROG_TR
AC_PROG_FIND
AC_PATH_PROG_VERIFY(CAT,cat,$PATH)dnl
AC_PATH_PROG_VERIFY(DIFF,diff,$PATH)dnl
AC_PATH_PROG_VERIFY(MV,mv,$PATH)dnl
AC_PATH_PROG_VERIFY(RM,rm,$PATH)dnl
dnl AC_PATH_PROG_VERIFY(DIRNAME,dirname,$PATH)dnl
AC_PATH_PROG(DOXYGEN,doxygen,,$PATH)dnl
AC_PATH_PROG(RPM,rpm,,$PATH)dnl
AC_PATH_PROG(INDENT,indent,,$PATH)dnl

AC_PROG_CXX
AC_PROG_RANLIB
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

AC_CHECK_LIB(usb,usb_init, ,[AC_MSG_ERROR([You have to have libusb installed first - get it from http://libusb.sourceforge.net/])])

case $host_os in
  *cygwin* ) CYGWIN=yes;;
         * ) CYGWIN=no;;
esac

if ${TEST} "${CYGWIN}" = "yes" ; then
    PATH_SEPARATOR="\\;"
else
    PATH_SEPARATOR=":"
fi

AC_SUBST(PATH_SEPARATOR)

AM_CONDITIONAL(RPM_ENABLED,${TEST} -n "${RPM}")
AM_CONDITIONAL(DOXYGEN_ENABLED,${TEST} -n "${DOXYGEN}")

AC_CONFIG_FILES([Makefile
	src/Makefile
	src/cpp/Makefile
	src/rpm/Makefile
	src/rpm/servomaster.spec
])
AC_OUTPUT

AC_MSG_RESULT()

if ${TEST} -z "$GLOBAL_OPTIONS_PRESENT" ; then
	AC_MSG_RESULT([You may want to create the ${GLOBAL_OPTIONS} file (see documentation)])
else
        AC_MSG_RESULT()
	AC_MSG_RESULT([Global options (${GLOBAL_OPTIONS}):])
	AC_MSG_RESULT()
	cat ${GLOBAL_OPTIONS}
	AC_MSG_RESULT()
fi

if ${TEST} -z "$LOCAL_OPTIONS_PRESENT" ; then
	AC_MSG_RESULT([You may want to create the ${LOCAL_OPTIONS} file (see documentation)])
else
        AC_MSG_RESULT()
	AC_MSG_RESULT([Local options (${LOCAL_OPTIONS}):])
	AC_MSG_RESULT()
	cat ${LOCAL_OPTIONS}
	AC_MSG_RESULT()
fi

AC_MSG_RESULT()
AC_MSG_RESULT(servomaster will be installed to:  ${prefix})
AC_MSG_RESULT()
